# Qt6_CMake_Template

./: .gitignore  Qt6_CMake_Template.code-workspace  README.md
CoreApplication/: CMakeLists.txt
CoreApplication/include/: Qt6_config.h.in
CoreApplication/src/: main.cpp
WidgetsApplication/: CMakeLists.txt
WidgetsApplication/src/: main.cpp
